# libcdr

./: .gitignore  .gitreview  AUTHORS  HACKING  Makefile.am  NEWS  README  autogen.sh  buildnumber.sh  configure.ac  detect-charset.patch  libcdr-0.0.pc  libcdr-0.0.pc.in  libcdr-zip.in  libcdr.pc.in  libcdr.spec.in  project.config
docs/doxygen/: Makefile.am  doxygen.cfg
inc/: Makefile.am
inc/libcdr/: CDRDocument.h  CDRStringVector.h  CMXDocument.h  Makefile.am  libcdr.h  libcdr_api.h
m4/: dlp_fallthrough.m4
src/: Makefile.am
src/conv/: Makefile.am
src/conv/raw/: .gitignore  Makefile.am  cdr2raw.cpp  cdr2raw.rc.in  cmx2raw.cpp  cmx2raw.rc.in
src/conv/svg/: .gitignore  Makefile.am  cdr2svg.cpp  cdr2svg.rc.in  cdr2xhtml.cpp  cdr2xhtml.rc.in  cmx2xhtml.cpp  cmx2xhtml.rc.in
src/conv/text/: .gitignore  Makefile.am  cdr2text.cpp  cdr2text.rc.in  cmx2text.cpp  cmx2text.rc.in
src/fuzz/: Makefile.am  cdrfuzzer.cpp  cmxfuzzer.cpp
src/lib/: .gitignore  CDRCollector.cpp  CDRCollector.h  CDRColorPalettes.h  CDRColorProfiles.h  CDRContentCollector.cpp  CDRContentCollector.h  CDRDocument.cpp  CDRDocument.h  CDRDocumentStructure.h  CDRInternalStream.cpp  CDRInternalStream.h  CDROutputElementList.cpp  CDROutputElementList.h  CDRParser.cpp  CDRParser.h  CDRPath.cpp  CDRPath.h  CDRSVGGenerator.cpp  CDRSVGGenerator.h  CDRStringVector.cpp  CDRStringVector.h  CDRStylesCollector.cpp  CDRStylesCollector.h  CDRTransforms.cpp  CDRTransforms.h  CDRTypes.cpp  CDRTypes.h  CDRUnzip.cpp  CDRUnzip.h  CDRZipStream.cpp  CDRZipStream.h  CMXDocument.cpp  CMXDocument.h  CMXDocumentStructure.h  CMXParser.cpp  CMXParser.h  CommonParser.cpp  CommonParser.h  Makefile.am  (+8 more)
src/test/: .gitignore  CDRInternalStreamTest.cpp  Makefile.am  test.cpp
